[package]
name = "rs-plugin-provider-pcloud"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[build]
target = "wasm32-unknown-unknown"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs-plugin-common-interfaces = "0.13.13"
serde = "1.0.197"
urlencoding = "2.1.3"
serde_json = "1"

extism-pdk = "1.1.0"