[package]
name = "rs-plugin-provider-pcloud"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[build]
target = "wasm32-unknown-unknown"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs-plugin-common-interfaces = "0.15.7"
serde = "1.0.197"
urlencoding = "2.1.3"
serde_json = "1"
time = { version = "0.3", features = ["serde", "parsing", "formatting"] }

extism-pdk = "1.2.0"

[[example]]
name = "token"

[dev-dependencies]
extism = "1.2.0"