[package]
name = "rs-plugin-provider-pcloud"
version = "0.2.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[build]
target = "wasm32-unknown-unknown"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs-plugin-common-interfaces = "0.25.3"
serde = "1.0.197"
urlencoding = "2.1.3"
serde_json = "1"
time = { version = "0.3", features = ["serde", "parsing", "formatting"] }

extism-pdk = "1.2.0"

[[example]]
name = "token"

[dev-dependencies]
extism = "1.2.0"
reqwest = { version = "0.12.3", features = ["stream", "gzip"]}
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["compat", "io", "io-util"] }
tokio-stream = { version = "0.1.14", features = ["io-util"] }